# realm-dotnet

./: .gitignore  .gitmodules  Realm.sln
Playground/: Playground.csproj  Program.cs
Realm/Realm/: GlobalSuppressions.cs  Realm.cs
Realm/Realm.Unity/: package.json
Realm/Realm.Unity/Editor/: UnityWeaver.cs  WeaverAssemblyResolver.cs
Realm/Realm.Unity/Editor/Common/: ImportedReferences.cs  RealmWeaver.cs
Realm/Realm.Unity/Editor/Extensions/: PropertyDefinitionExtensions.cs
Realm/Realm/Extensions/: FrozenObjectsExtensions.cs
Realm/Realm/Handles/: AppHandle.cs
Realm/Realm/Helpers/: Operator.cs  Operator.tt
Realm/Realm/Linq/: RealmResultsVisitor.cs
Realm/Realm/Properties/: AssemblyInfo.cs
Realm/Realm/Schema/: PropertyType.cs  PropertyTypeEx.cs
Tests/Realm.Playground/: Program.cs  Realm.Playground.csproj
Tests/Realm.Playground/Properties/: launchSettings.json
Tests/Realm.Tests/: Realm.Tests.csproj
Tests/Realm.Tests/Database/: TestObjects.cs
Tests/Tests.UWP/: Tests.UWP.csproj
Tests/Tests.Unity/: Tests.PlayMode.Player.csproj  Tests.PlayMode.csproj  Tests.Unity.sln  UnityWeaver.csproj
Tests/Tests.Unity/Assets/: InitTestScene637431718904596435.unity
Tests/Tests.Unity/Assets/Tests.PlayMode/: Tests.PlayMode.asmdef
Tests/Tests.Unity/Assets/Tests.PlayMode/Database/: APITests.cs  DynamicAccessTests.cs  DynamicEmbeddedTests.cs  DynamicRelationshipTests.cs  EmbeddedObjectsTests.cs  InstanceTests.cs  MigrationTests.cs  PrimaryKeyTests.cs
Tests/Tests.Unity/Assets/Tests.PlayMode/Sync/: FunctionsTests.cs  MergeByPKTests.cs  SynchronizedInstanceTests.cs
Tests/Tests.Unity/ProjectSettings/: ProjectSettings.asset
dev/bench/: data.js
wrappers/: CMakeLists.txt  build.ps1
wrappers/src/: marshalling.hpp  object_cs.cpp
